# pdf-machine

./: LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  enums.py  main.py  pyproject.toml  settings.py
nginx/: Dockerfile  nginx.conf
