[tool.poetry]
name = "pdf-create"
version = "0.1.0"
description = "pdf-create"
authors = ["Your Name <you@example.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.1"
playwright = {extras = ["chrome"], version = "^1.46.0"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
